fix: switch export filenames to ID-based naming and clean stale files on git export
- Add name/connectionId/connection to diff detection fields for connections, inspect tasks, and API modules
- Switch all export file naming from entity name to entity ID to avoid duplicate collisions
- Clean up stale files in git export subdirectories before writing new contents