@@ -1317,6 +1317,7 @@ public class GroupInfoService extends BaseService<GroupInfoDto, GroupInfoEntity,
 
     /** 连接比对重要字段（精确比对+记录 from/to）。config 全量比对不依赖此列表 */
     private static final List<String> CONNECTION_IMPORTANT_FIELDS = Arrays.asList(
+            "name",                     // 连接名称
             "connection_type",          // Source/Target/Source&Target
             "shareCdcEnable",           // 共享CDC开关
             "accessNodeType",           // 分配引擎模式
@@ -1332,6 +1333,7 @@ public class GroupInfoService extends BaseService<GroupInfoDto, GroupInfoEntity,
     private static Object getTopLevelFieldValue(DataSourceConnectionDto conn, String field) {
         if (conn == null || field == null) return null;
         return switch (field) {
+            case "name" -> conn.getName();
             case "connection_type" -> conn.getConnection_type();
             case "shareCdcEnable" -> conn.getShareCdcEnable();
             case "accessNodeType" -> conn.getAccessNodeType();
@@ -1412,7 +1414,7 @@ public class GroupInfoService extends BaseService<GroupInfoDto, GroupInfoEntity,
 
                 List<FieldChange> changes = getConnectionChangedFields(fileConn, existingConn);
                 if (!changes.isEmpty()) {
-                    ResourceDiffItem item = new ResourceDiffItem(name, null, changes);
+                    ResourceDiffItem item = new ResourceDiffItem(existingConn.getName(), null, changes);
                     // Build fieldLabels from spec.json
                     if (definition != null) {
                         Map<String, String> configPathToLabel = ResourceHandler.buildConfigPathToLabelMap(definition);
@@ -1794,6 +1796,7 @@ public class GroupInfoService extends BaseService<GroupInfoDto, GroupInfoEntity,
     private List<FieldChange> getInspectChangedFields(InspectDto fileInspect, InspectDto existingInspect) {
         List<FieldChange> changes = new ArrayList<>();
         // from = existingInspect (DB), to = fileInspect (import)
+        addFieldChange(changes, "name", existingInspect.getName(), fileInspect.getName());
         addFieldChange(changes, "flowId", existingInspect.getFlowId(), fileInspect.getFlowId());
         addFieldChange(changes, "mode", existingInspect.getMode(), fileInspect.getMode());
         addFieldChange(changes, "inspectMethod", existingInspect.getInspectMethod(), fileInspect.getInspectMethod());
@@ -1886,7 +1889,7 @@ public class GroupInfoService extends BaseService<GroupInfoDto, GroupInfoEntity,
 
     /** API 对比时排除的顶层字段：环境相关、运行时状态字段 */
     private static final Set<String> MODULE_EXCLUDED_FIELDS = new HashSet<>(Arrays.asList(
-            "id", "connectionId", "connection", "createTime", "datasource",
+            "id", "createTime", "datasource",
             "createUser", "lastUpdBy", "status", "isDeleted"
     ));
 
@@ -3219,17 +3222,17 @@ public class GroupInfoService extends BaseService<GroupInfoDto, GroupInfoEntity,
         // Task/ — 校验任务（每条独立文件）
         for (TaskUpAndLoadDto item : payloadsByType.getOrDefault(ResourceType.INSPECT_TASK.name(), Collections.emptyList())) {
             if (!GroupConstants.COLLECTION_INSPECT.equals(item.getCollectionName())) continue;
-            String name = extractNameFromJson(item.getJson());
-            if (StringUtils.isBlank(name)) continue;
-            contents.put("Task/" + sanitizeFileName(name) + "_ValidateTask.json", toJsonBytes(List.of(item)));
+            String id = extractIdFromJson(item.getJson());
+            if (StringUtils.isBlank(id)) continue;
+            contents.put("Task/" + id + "_ValidateTask.json", toJsonBytes(List.of(item)));
         }
 
         // API/ — 每个模块独立文件
         for (TaskUpAndLoadDto item : payloadsByType.getOrDefault(ResourceType.MODULE.name(), Collections.emptyList())) {
             if (!GroupConstants.COLLECTION_MODULES.equals(item.getCollectionName())) continue;
-            String name = extractNameFromJson(item.getJson());
-            if (StringUtils.isBlank(name)) continue;
-            contents.put("API/" + sanitizeFileName(name) + "_Module.json", toJsonBytes(List.of(item)));
+            String id = extractIdFromJson(item.getJson());
+            if (StringUtils.isBlank(id)) continue;
+            contents.put("API/" + id + "_Module.json", toJsonBytes(List.of(item)));
         }
 
         // User/ — 用户/角色/权限信息
@@ -3251,40 +3254,37 @@ public class GroupInfoService extends BaseService<GroupInfoDto, GroupInfoEntity,
                 ResourceType.CONNECTION.name(), Collections.emptyList());
         if (payload.isEmpty()) return;
 
-        // 第一次遍历：建立 connectionId → connectionName 映射
-        Map<String, String> connIdToName = new LinkedHashMap<>();
+        // 第一次遍历：收集 connectionId 集合
+        Set<String> connIds = new LinkedHashSet<>();
         for (TaskUpAndLoadDto item : payload) {
             if (GroupConstants.COLLECTION_CONNECTION.equals(item.getCollectionName())) {
-                String name = extractNameFromJson(item.getJson());
                 String id = extractIdFromJson(item.getJson());
-                if (StringUtils.isNotBlank(name) && StringUtils.isNotBlank(id)) {
-                    connIdToName.put(id, name);
+                if (StringUtils.isNotBlank(id)) {
+                    connIds.add(id);
                 }
             }
         }
 
         // 第二次遍历：按 source._id 将元数据分组到各连接（source._id 存储的是连接 ID）
-        Map<String, List<TaskUpAndLoadDto>> metadataByConnName = new LinkedHashMap<>();
+        Map<String, List<TaskUpAndLoadDto>> metadataByConnId = new LinkedHashMap<>();
         for (TaskUpAndLoadDto item : payload) {
             if (GroupConstants.COLLECTION_METADATA_INSTANCES.equals(item.getCollectionName())) {
                 String sourceId = extractNestedFieldFromJson(item.getJson(), "source", "_id");
-                String connName = connIdToName.get(sourceId);
-                if (connName != null) {
-                    metadataByConnName.computeIfAbsent(connName, k -> new ArrayList<>()).add(item);
+                if (connIds.contains(sourceId)) {
+                    metadataByConnId.computeIfAbsent(sourceId, k -> new ArrayList<>()).add(item);
                 }
             }
         }
 
-        // 第三次遍历：写出每个连接的独立文件
+        // 第三次遍历：写出每个连接的独立文件（以 id 命名）
         for (TaskUpAndLoadDto item : payload) {
             if (!GroupConstants.COLLECTION_CONNECTION.equals(item.getCollectionName())) continue;
-            String name = extractNameFromJson(item.getJson());
-            if (StringUtils.isBlank(name)) continue;
-            String safeName = sanitizeFileName(name);
-            contents.put("Connection/" + safeName + "_Connection_Config.json", toJsonBytes(List.of(item)));
-            List<TaskUpAndLoadDto> metadataItems = metadataByConnName.getOrDefault(name, Collections.emptyList());
+            String id = extractIdFromJson(item.getJson());
+            if (StringUtils.isBlank(id)) continue;
+            contents.put("Connection/" + id + "_Connection_Config.json", toJsonBytes(List.of(item)));
+            List<TaskUpAndLoadDto> metadataItems = metadataByConnId.getOrDefault(id, Collections.emptyList());
             if (!metadataItems.isEmpty()) {
-                contents.put("Connection/" + safeName + "_Connection_Metadata.json", toJsonBytes(metadataItems));
+                contents.put("Connection/" + id + "_Connection_Metadata.json", toJsonBytes(metadataItems));
             }
         }
     }
@@ -3297,14 +3297,14 @@ public class GroupInfoService extends BaseService<GroupInfoDto, GroupInfoEntity,
     private void buildTaskFileContents(List<TaskUpAndLoadDto> payload, String suffix,
             Map<String, byte[]> contents) {
         List<TaskUpAndLoadDto> currentGroup = null;
-        String currentName = null;
+        String currentId = null;
         for (TaskUpAndLoadDto item : payload) {
             if (GroupConstants.COLLECTION_TASK.equals(item.getCollectionName())) {
                 // 保存上一个任务分组
-                if (currentName != null && currentGroup != null && !currentGroup.isEmpty()) {
-                    contents.put("Task/" + sanitizeFileName(currentName) + suffix, toJsonBytes(currentGroup));
+                if (currentId != null && currentGroup != null && !currentGroup.isEmpty()) {
+                    contents.put("Task/" + currentId + suffix, toJsonBytes(currentGroup));
                 }
-                currentName = extractNameFromJson(item.getJson());
+                currentId = extractIdFromJson(item.getJson());
                 currentGroup = new ArrayList<>();
                 currentGroup.add(item);
             } else if (currentGroup != null) {
@@ -3312,8 +3312,8 @@ public class GroupInfoService extends BaseService<GroupInfoDto, GroupInfoEntity,
             }
         }
         // 保存最后一个任务分组
-        if (currentName != null && currentGroup != null && !currentGroup.isEmpty()) {
-            contents.put("Task/" + sanitizeFileName(currentName) + suffix, toJsonBytes(currentGroup));
+        if (currentId != null && currentGroup != null && !currentGroup.isEmpty()) {
+            contents.put("Task/" + currentId + suffix, toJsonBytes(currentGroup));
         }
     }
 
